# oc_img_gen

./: .gitignore  Cargo.toml  oc_img_gen.code-workspace
extra/: play_szt.lua  play_szt_par.lua  play_szt_v1.lua  screenConfig.lua  szt.pat  szt_v3.pat  szt_v4.pat  szt_v5.pat  szt_v6.pat  timings.txt
extra/legacy/: play_szt.lua  play_szt_v4.lua  szt_v1.pat  szt_v2.pat  szt_v4.pat  szt_v5.pat
src/: braille.rs  cli.rs  image.rs  main.rs  test.rs
src/audio/: audio_reader.rs  mod.rs  packet.rs
src/cmd/: bootstrap.lua  mod.rs  szt.rs  szt_file.rs  term_pixel.rs
src/cmd/batchers/: batcher0.rs  batcher1.rs  batcher2.rs  batcher2_old.rs  batcher_v1.rs  mod.rs
src/cmd/renderers/: basic_renderer.rs  code_renderer.rs  mod.rs  renderer.rs  szt_renderer.rs
src/encoder/: audio_reader.rs  cli.rs  ffmpeg_tracing.rs  media_container.rs  mod.rs  muxer.rs  reader.rs  test.rs  video_reader.rs
src/math/: frac.rs  mod.rs  point.rs  rect.rs  size.rs
src/oc_color/: packed_color.rs  palette.rs  rgb.rs
src/oc_color/formatters/: formatter.rs  hybrid_formatter.rs  mutable_palette_formatter.rs
src/player/: mod.rs
src/video/: braille.rs  image.rs  image_iter.rs  mod.rs  rgb.rs  video_reader.rs
src/video/braille/: compute.wgsl  gpu.rs  mod.rs
src/video/cmd/: batcher.rs  machine.rs  mod.rs  packet.rs  szt.rs  term_char.rs  term_pixel.rs
src/video/cmd/batchers/: batcher_v0.rs  batcher_v1.rs  batcher_v2.rs
src/video/cmd/renderers/: basic_renderer.rs  cached_renderer.rs  code_renderer.rs  mod.rs  renderer.rs  stat_renderer.rs  szt_renderer.rs  szt_renderer_cmd.rs
src/video/oc_color/: mod.rs  packed_color.rs  palette.rs  rgb.rs
src/video/oc_color/formatters/: formatter.rs  hybrid_formatter.rs  mod.rs  mutable_palette_formatter.rs
stats/: timings.txt
