[package]
name = "oc_img_gen"
version = "0.2.0"
edition = "2024"


[dependencies]
#cli & user feedback
clap = { version = "4.6.1", features= ["derive"] }
color-print = "0.3.7"
humantime = "2.3.0"
indicatif = "0.18.4"
# tracing-indicatif = "0.3.13"
# tracing = "0.1.41"
# tracing-core = "0.1.34"
# tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
stopwatch = "0.0.7"
charts-rs = { "version" = "0.4.2", optional = true }

#utilities
itertools = "0.14.0"
deku = "0.20.3"
deku_string = { git = "https://github.com/eirtools/deku_string", branch = "renovate/deku-0.x", version = "0.4.1-0" }
lazy_static = "1.5.0"
num-traits = "0.2.19"
enum-as-inner = "0.7.0"
phf = { version = "0.13.1", features = ["macros"] }
lapjv = "0.3.0"
num = "0.4.3"
rayon = "1.12.0"
integer-sqrt = "0.1.5"

#error handling
anyhow = "1.0.102"
thiserror = "2.0.18"
all_asserts = "2.3.3"

#loading
ffmpeg-next = { version = "8.1.0", features = ["software-resampling"] }
ffmpeg-sys-next = "8.1.0"
lodepng = { version = "3.12.2", optional = true }

#fourier
rustfft = "6"
realfft = "3"

#gpu
wgpu = { version = "29.0.3", optional = true }
bytemuck = { version = "1.25.0", optional = true }
futures = { version = "0.3.32", optional = true }
futures-intrusive = { version = "0.5.0", optional = true }

#player
#minifb = { version = "0.28.0" }
minifb = { version = "0.28.0", path = "../rust_minifb" }
cpal = { version = "0.17.3" }
triple_buffer = { version = "9.0.0" }

#custom
szu = { version = "0.2.2", path = "../szu" }

[features]
default = []
log = []
debug-mode = ["lodepng"]
gpu = ["wgpu", "bytemuck", "futures", "futures-intrusive"]
charts = ["charts-rs"]


# https://stackoverflow.com/questions/60751806/how-to-compile-some-dependencies-with-release
[profile.dev.package."*"]
opt-level = 3

# [profile.dev]
# opt-level = 3

[profile.release]
# debug = true
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
