[package]
name = "oc_img_gen"
version = "0.6.0"
edition = "2024"


[dependencies]
#custom
szu = { version = "0.2.2", git = "https://github.com/StaterZ/szu-rs", branch = "master" }

#cli & user feedback
clap = { version = "4.6.2", features= ["derive"] }
color-print = "0.3.7"
humantime = "2.4.0"
stopwatch = "0.0.7"
charts-rs = { "version" = "0.7.1", optional = true }
indicatif = "0.18.6"
# tracing-indicatif = "0.3.13"
# tracing = "0.1.41"
# tracing-core = "0.1.34"
# tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

#utilities
itertools = "0.15.0"
deku = "0.20.3"
deku_string = { version = "0.4.1-0", git = "https://github.com/eirtools/deku_string", branch = "renovate/deku-0.x" }
lazy_static = "1.5.0"
num-traits = "0.2.19"
enum-as-inner = "0.7.0"
phf = { version = "0.14.0", features = ["macros"] }
lapjv = "0.3.0"
num = "0.4.3"
rayon = { version = "1.12.0", optional = true }
integer-sqrt = "0.1.5"
palette = "0.7.6"
grid = "1.0.1"

#error handling
anyhow = "1.0.103"
thiserror = "2.0.18"
all_asserts = "2.3.4"

#loading
ffmpeg-next = { version = "8.1.0", features = ["software-resampling"] }
ffmpeg-sys-next = "8.1.0"
lodepng = "3.12.2"

#fourier
rustfft = "6"
realfft = "3"

#player
minifb = { version = "0.28.0", git = "https://github.com/emoon/rust_minifb", branch = "master" }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]}
cpal = { version = "0.18.1" }
triple_buffer = { version = "9.0.0" }

[features]
default = []
log = []
rayon = ["dep:rayon"]
charts = ["charts-rs"]
# gpu = ["wgpu", "bytemuck", "futures", "futures-intrusive"]


# https://stackoverflow.com/questions/60751806/how-to-compile-some-dependencies-with-release
[profile.dev.package."*"]
opt-level = 3

# [profile.dev]
# opt-level = 3

[profile.release]
# debug = true
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
